<resources>
    <string name="app_name">Github Search</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hint">Input Username</string>
    <string name="com_tv">Company:</string>
    <string name="user_tv">Username:</string>
    <string name="loc_tv">Location:</string>
    <string name="app_detail">Detail User</string>
    <string name="er_msg">There is an error</string>
    <string name="er_msg2">User Not Found!</string>
</resources>